--- a/views/add_category.ui
+++ b/views/add_category.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Add Item</string>
+   <string>Add category</string>
   </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
@@ -23,28 +23,17 @@
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="3" column="0">
-     <widget class="QLabel" name="category_label">
-      <property name="text">
-       <string>category</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="price_label">
-      <property name="text">
-       <string>price</string>
-      </property>
-      <property name="alignment">
-       <set>Qt::AlignCenter</set>
-      </property>
-     </widget>
+    <item row="1" column="1" colspan="2">
+     <widget class="QLineEdit" name="name_editor"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="lable_name">
+      <property name="minimumSize">
+       <size>
+        <width>90</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="maximumSize">
        <size>
         <width>45</width>
@@ -59,47 +48,30 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="1" colspan="2">
-     <widget class="QLineEdit" name="name_editor"/>
-    </item>
-    <item row="2" column="1" colspan="2">
-     <widget class="QLineEdit" name="price_editor"/>
-    </item>
-    <item row="5" column="0">
-     <widget class="QLabel" name="date_label">
+    <item row="2" column="0">
+     <widget class="QLabel" name="lable_description">
+      <property name="minimumSize">
+       <size>
+        <width>90</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>45</width>
+        <height>16777215</height>
+       </size>
+      </property>
       <property name="text">
-       <string>date</string>
+       <string>description</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
-    <item row="5" column="1" colspan="2">
-     <widget class="QDateEdit" name="date_editor">
-      <property name="displayFormat">
-       <string>Mm/dd/yyyy</string>
-      </property>
-      <property name="calendarPopup">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="1">
-     <widget class="QComboBox" name="category_selector"/>
-    </item>
-    <item row="3" column="2">
-     <widget class="QPushButton" name="add_category_button">
-      <property name="maximumSize">
-       <size>
-        <width>83</width>
-        <height>16777215</height>
-       </size>
-      </property>
-      <property name="text">
-       <string>Add category</string>
-      </property>
-     </widget>
+    <item row="2" column="1">
+     <widget class="QTextEdit" name="description_editor"/>
     </item>
    </layout>
   </widget>
