--- a/views/mainwindow.ui
+++ b/views/mainwindow.ui
@@ -10,19 +10,19 @@
     <x>0</x>
     <y>0</y>
     <width>790</width>
-    <height>428</height>
+    <height>460</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>790</width>
-    <height>428</height>
+    <height>460</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>790</width>
-    <height>428</height>
+    <height>460</height>
    </size>
   </property>
   <property name="contextMenuPolicy">
@@ -45,9 +45,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>0</y>
+      <y>8</y>
       <width>151</width>
-      <height>385</height>
+      <height>390</height>
      </rect>
     </property>
     <layout class="QFormLayout" name="formLayout">
@@ -62,6 +62,16 @@
       </widget>
      </item>
      <item row="2" column="0" colspan="2">
+      <widget class="QListWidget" name="categories_list">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>140</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0" colspan="2">
       <widget class="QLabel" name="periond_label">
        <property name="text">
         <string>Period</string>
@@ -71,14 +81,14 @@
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
+     <item row="4" column="0">
       <widget class="QLabel" name="label_3">
        <property name="text">
         <string>Start</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="1">
+     <item row="4" column="1">
       <widget class="QDateEdit" name="periond_start">
        <property name="displayFormat">
         <string>M/dd/yyyy</string>
@@ -88,14 +98,14 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
+     <item row="5" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>Finish</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="5" column="1">
       <widget class="QDateEdit" name="periond_finish">
        <property name="displayFormat">
         <string>M/dd/yyyy</string>
@@ -105,17 +115,14 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0" colspan="2">
-      <widget class="QListWidget" name="categories_list">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>209</height>
-        </size>
+     <item row="6" column="0" colspan="2">
+      <widget class="QPushButton" name="show_query_button">
+       <property name="text">
+        <string>Show</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="0" colspan="2">
+     <item row="7" column="0" colspan="2">
       <widget class="QLabel" name="user_label">
        <property name="text">
         <string>UserName</string>
@@ -125,17 +132,17 @@
        </property>
       </widget>
      </item>
-     <item row="7" column="0" colspan="2">
+     <item row="8" column="0" colspan="2">
       <widget class="QPushButton" name="change_user_button">
        <property name="text">
         <string>Change User</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="0" colspan="2">
-      <widget class="QPushButton" name="show_query_button">
+     <item row="1" column="0" colspan="2">
+      <widget class="QPushButton" name="remove_category_button">
        <property name="text">
-        <string>Show</string>
+        <string>Remove category</string>
        </property>
       </widget>
      </item>
@@ -145,9 +152,9 @@
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>20</y>
+      <y>10</y>
       <width>611</width>
-      <height>331</height>
+      <height>351</height>
      </rect>
     </property>
    </widget>
@@ -155,7 +162,7 @@
     <property name="geometry">
      <rect>
       <x>630</x>
-      <y>360</y>
+      <y>380</y>
       <width>151</width>
       <height>22</height>
      </rect>
