--- a/views/add_item.ui
+++ b/views/add_item.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>391</width>
-    <height>245</height>
+    <height>352</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,11 +19,31 @@
      <x>10</x>
      <y>10</y>
      <width>371</width>
-     <height>181</height>
+     <height>291</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="3" column="0">
+    <item row="2" column="1" colspan="2">
+     <widget class="QDoubleSpinBox" name="price_spin">
+      <property name="maximum">
+       <double>9000000000000000000.000000000000000</double>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1" colspan="2">
+     <widget class="QLineEdit" name="description_editor"/>
+    </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="description_label">
+      <property name="text">
+       <string>description</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
      <widget class="QLabel" name="category_label">
       <property name="text">
        <string>category</string>
@@ -47,7 +67,7 @@
      <widget class="QLabel" name="lable_name">
       <property name="maximumSize">
        <size>
-        <width>45</width>
+        <width>57</width>
         <height>16777215</height>
        </size>
       </property>
@@ -62,10 +82,7 @@
     <item row="1" column="1" colspan="2">
      <widget class="QLineEdit" name="name_editor"/>
     </item>
-    <item row="2" column="1" colspan="2">
-     <widget class="QLineEdit" name="price_editor"/>
-    </item>
-    <item row="5" column="0">
+    <item row="7" column="0">
      <widget class="QLabel" name="date_label">
       <property name="text">
        <string>date</string>
@@ -75,20 +92,27 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="1" colspan="2">
+    <item row="7" column="1" colspan="2">
      <widget class="QDateEdit" name="date_editor">
       <property name="displayFormat">
-       <string>Mm/dd/yyyy</string>
+       <string>M/dd/yyyy</string>
       </property>
       <property name="calendarPopup">
        <bool>true</bool>
       </property>
+      <property name="date">
+       <date>
+        <year>2017</year>
+        <month>4</month>
+        <day>18</day>
+       </date>
+      </property>
      </widget>
     </item>
-    <item row="3" column="1">
+    <item row="5" column="1">
      <widget class="QComboBox" name="category_selector"/>
     </item>
-    <item row="3" column="2">
+    <item row="5" column="2">
      <widget class="QPushButton" name="add_category_button">
       <property name="maximumSize">
        <size>
@@ -101,13 +125,33 @@
       </property>
      </widget>
     </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="count_label">
+      <property name="text">
+       <string>count</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1" colspan="2">
+     <widget class="QSpinBox" name="count_split">
+      <property name="minimum">
+       <number>1</number>
+      </property>
+      <property name="maximum">
+       <number>500</number>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QPushButton" name="save_button">
    <property name="geometry">
     <rect>
-     <x>299</x>
-     <y>210</y>
+     <x>280</x>
+     <y>310</y>
      <width>81</width>
      <height>22</height>
     </rect>
@@ -120,8 +164,8 @@
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>210</y>
-     <width>91</width>
+     <y>310</y>
+     <width>81</width>
      <height>22</height>
     </rect>
    </property>
@@ -132,14 +176,30 @@
   <widget class="QPushButton" name="reset_button">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>210</y>
-     <width>80</width>
+     <x>40</x>
+     <y>310</y>
+     <width>81</width>
      <height>22</height>
     </rect>
    </property>
    <property name="text">
     <string>Reset</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="remove_button">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>310</y>
+     <width>81</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Delete</string>
    </property>
   </widget>
  </widget>
