--- a/views/add_item.ui
+++ b/views/add_item.ui
@@ -145,6 +145,19 @@
       </property>
      </widget>
     </item>
+    <item row="6" column="0">
+     <widget class="QLabel" name="card_label">
+      <property name="text">
+       <string>card</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="1" colspan="2">
+     <widget class="QComboBox" name="card_selector"/>
+    </item>
    </layout>
   </widget>
   <widget class="QPushButton" name="save_button">
